# SimpleFTP

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  License.txt  README.md  ftp-client.sln  vcpkg.json
.github/workflows/: ccpp-macos-clang.yml  ccpp-macos-gcc.yml  ccpp-ubuntu-clang.yml  ccpp-ubuntu-gcc.yml  ccpp-windows-x64.yml
ClientApp/: CMakeLists.txt
ClientApp/headers/: ClientApp.h
ClientApp/res/: app_icon.XPM  app_icon.rc
ClientApp/source/: ClientApp.cpp  main.cpp
ftp-client/: AsioClientFTP.cpp  AsioClientFTP.h  Client.cpp  ClientApp.cpp  ClientApp.h  FTPrespone.cpp  FTPresponse.h  IAsioClientFTP.cpp  IAsioClientFTP.h  Resource.rc  ServerTreeCtrltemData.cpp  ServerTreeCtrltemData.h  enumMessage.h  ftp-client.vcxproj  ftp-client.vcxproj.filters  main.cpp  wxFTPGenericDirCtrl.cpp  wxFTPGenericDirCtrl.h  wxFTPWrapper.cpp  wxFTPWrapper.h  wxGenericDirPanel.cpp  wxILogCtrl.cpp  wxILogCtrl.h  wxLocalDirCtrl.cpp  wxLocalDirCtrl.h  wxLocalDropTarget.cpp  wxLogCtrl.cpp  wxLogCtrl.h  wxLogMessageItem.cpp  wxLogMessageItem.h  wxRemoteDirCtrl.cpp  wxRemoteDirCtrl.h  wxRemoteDropTarget.cpp  wxRemoteDropTarget.h  wxRemoteTreeCtrl.cpp  wxRemoteTreeCtrl.h  wxRemoteTreeCtrlItemData.cpp  wxRemoteTreeCtrlItemData.h  wxServerTreeCtrltemData.cpp  wxServerTreeCtrltemData.h  (+4 more)
modules/IAsioClientFTP/: CMakeLists.txt
modules/IAsioClientFTP/headers/: IAsioClientFTP.h
modules/IAsioClientFTP/source/: FTPrespone.cpp  IAsioClientFTP.cpp
modules/wxFTPWrapper/: CMakeLists.txt
modules/wxFTPWrapper/headers/: wxFTPWrapper.h  wxLogMessageItem.h  wxTransferTransaction.h
modules/wxFTPWrapper/source/: wxFTPWrapper.cpp  wxLogMessageItem.cpp
modules/wxGenericDirPanel/: CMakeLists.txt
modules/wxGenericDirPanel/headers/: wxGenericDirPanel.h
modules/wxGenericDirPanel/modules/wxLocalDirCtrl/: CMakeLists.txt
modules/wxGenericDirPanel/modules/wxLocalDirCtrl/headers/: wxLocalDirCtrl.h
modules/wxGenericDirPanel/modules/wxLocalDirCtrl/source/: wxLocalDirCtrl.cpp
modules/wxGenericDirPanel/modules/wxRemoteDirCtrl/: CMakeLists.txt
modules/wxGenericDirPanel/modules/wxRemoteDirCtrl/headers/: wxRemoteDirCtrl.h  wxRemoteTreeCtrlItemData.h
modules/wxGenericDirPanel/modules/wxRemoteDirCtrl/source/: wxRemoteDirCtrl.cpp  wxRemoteTreeCtrlItemData.cpp
modules/wxGenericDirPanel/modules/wxTreeDropTarget/: CMakeLists.txt
modules/wxGenericDirPanel/modules/wxTreeDropTarget/headers/: wxLocalDropTarget.h  wxRemoteDropTarget.h  wxTreeDropTarget.h
modules/wxGenericDirPanel/modules/wxTreeDropTarget/source/: wxRemoteDropTarget.cpp
modules/wxGenericDirPanel/source/: wxGenericDirPanel.cpp
modules/wxILogCtrl/: CMakeLists.txt
modules/wxILogCtrl/source/: wxILogCtrl.cpp
modules/wxTaskManager/: CMakeLists.txt
modules/wxTaskManager/headers/: wxTaskManager.h
modules/wxTaskManager/source/: wxLogCtrl.cpp  wxTaskManager.cpp
